--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".SignInActivity" >
+        <activity android:name=".SignUpActivity"
+            android:theme="@style/Theme.Navigation_App.NoActionBar"/>
+        <activity android:name=".SignInActivity"
+            android:theme="@style/Theme.Navigation_App.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
